--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,8 +3,27 @@ body {
   height: 100%;
 }
 
-.demo-table {
+.centrado-texto {
+  text-align: center;
+}
+
+form {
+  margin: 0 auto;
+}
+
+.content {
+  margin: 0 auto;
+  max-width: 1024px;
+}
+
+.container-button {
+  display: flex;
+  justify-content: center;
+}
+
+.tabla-cuotas {
   width: 100%;
+  margin-top: 30px;
 }
 
 .mat-column-demo-position {
@@ -41,4 +60,8 @@ body {
 
 td {
   padding-right: 8px;
+}
+
+tr.mat-footer-row {
+  font-weight: bold;
 }
