--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <style></style>
 
 <div class="content" role="main">
-  <h1>Calcular cuotas - sistema fracés</h1>
+  <h1 class="centrado-texto">Calcular cuotas - sistema fracés</h1>
 
   <form class="example-form">
     <mat-form-field class="example-full-width" appearance="fill">
@@ -14,68 +14,54 @@
       <input name="plazo" matInput maxlength="5" [(ngModel)]="plazo" />
     </mat-form-field>
 
-    <button mat-raised-button (click)="calcular()">Generar</button>
+    <mat-form-field class="example-full-width" appearance="fill">
+      <mat-label>Tasa</mat-label>
+      <input name="tasa" matInput maxlength="5" [(ngModel)]="tazaInteres" />
+    </mat-form-field>
+
+    <div class="container-button">
+      <button mat-raised-button (click)="calcular()">Generar</button>
+    </div>
   </form>
-  <!-- {{cuotas | json}} -->
 
-  <!--<table mat-table [dataSource]="dataSource" class="mat-elevation-z8 demo-table">
-
-     <ng-container matColumnDef="numero-cuota">
-      <th mat-header-cell *matHeaderCellDef>Número cuota</th>
+  <table
+    mat-table
+    [dataSource]="dataSource"
+    class="mat-elevation-z8 tabla-cuotas"
+  >
+    <ng-container matColumnDef="numero-cuota">
+      <th mat-header-cell *matHeaderCellDef>Nro. Cuota</th>
       <td mat-cell *matCellDef="let element">{{ element.numeroCuota }}</td>
+      <td mat-footer-cell *matFooterCellDef>Total</td>
     </ng-container>
 
     <ng-container matColumnDef="amortizacion">
       <th mat-header-cell *matHeaderCellDef>Amortizacion</th>
       <td mat-cell *matCellDef="let element">{{ element.amortizacion }}</td>
+      <td mat-footer-cell *matFooterCellDef>{{ totalAmortizacion }}</td>
     </ng-container>
+
     <ng-container matColumnDef="interes">
       <th mat-header-cell *matHeaderCellDef>Interés</th>
       <td mat-cell *matCellDef="let element">{{ element.interes }}</td>
+      <td mat-footer-cell *matFooterCellDef>{{ totalInteres }}</td>
     </ng-container>
 
     <ng-container matColumnDef="saldo">
       <th mat-header-cell *matHeaderCellDef>Saldo</th>
       <td mat-cell *matCellDef="let element">{{ element.saldo }}</td>
+      <td mat-footer-cell *matFooterCellDef></td>
     </ng-container>
 
     <ng-container matColumnDef="cuota">
       <th mat-header-cell *matHeaderCellDef>Cuota</th>
       <td mat-cell *matCellDef="let element">{{ element.cuota }}</td>
+      <td mat-footer-cell *matFooterCellDef>{{ totalCuotas }}</td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-  </table> -->
-
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 demo-table">
-    <ng-container matColumnDef="numero-cuota">
-      <th mat-header-cell *matHeaderCellDef> Nro. Cuota</th>
-      <td mat-cell *matCellDef="let element"> {{element.numeroCuota}} </td>
-    </ng-container>
-  
-    <ng-container matColumnDef="amortizacion">
-      <th mat-header-cell *matHeaderCellDef> Amortizacion </th>
-      <td mat-cell *matCellDef="let element"> {{element.amortizacion}} </td>
-    </ng-container>
-  
-    <ng-container matColumnDef="interes">
-      <th mat-header-cell *matHeaderCellDef> Interés </th>
-      <td mat-cell *matCellDef="let element"> {{element.interes}} </td>
-    </ng-container>
-  
-    <ng-container matColumnDef="saldo">
-      <th mat-header-cell *matHeaderCellDef> Saldo </th>
-      <td mat-cell *matCellDef="let element"> {{element.saldo}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="cuota">
-      <th mat-header-cell *matHeaderCellDef> Cuota </th>
-      <td mat-cell *matCellDef="let element"> {{element.cuota}} </td>
-    </ng-container>
-  
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr mat-header-row *matHeaderRowDef="columnasTabla"></tr>
+    <tr mat-row *matRowDef="let row; columns: columnasTabla"></tr>
+    <tr mat-footer-row *matFooterRowDef="columnasTabla"></tr>
   </table>
 </div>
 
