--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,26 +37,34 @@
 
     <ng-container matColumnDef="amortizacion">
       <th mat-header-cell *matHeaderCellDef>Amortizacion</th>
-      <td mat-cell *matCellDef="let element">{{ element.amortizacion }}</td>
-      <td mat-footer-cell *matFooterCellDef>{{ totalAmortizacion }}</td>
+      <td mat-cell *matCellDef="let element">
+        {{ element.amortizacion | separadorMiles }}
+      </td>
+      <td mat-footer-cell *matFooterCellDef>{{ totalAmortizacion | separadorMiles }}</td>
     </ng-container>
 
     <ng-container matColumnDef="interes">
       <th mat-header-cell *matHeaderCellDef>Interés</th>
-      <td mat-cell *matCellDef="let element">{{ element.interes }}</td>
-      <td mat-footer-cell *matFooterCellDef>{{ totalInteres }}</td>
+      <td mat-cell *matCellDef="let element">
+        {{ element.interes | separadorMiles }}
+      </td>
+      <td mat-footer-cell *matFooterCellDef>{{ totalInteres | separadorMiles  }}</td>
     </ng-container>
 
     <ng-container matColumnDef="saldo">
       <th mat-header-cell *matHeaderCellDef>Saldo</th>
-      <td mat-cell *matCellDef="let element">{{ element.saldo }}</td>
+      <td mat-cell *matCellDef="let element">
+        {{ element.saldo | separadorMiles }}
+      </td>
       <td mat-footer-cell *matFooterCellDef></td>
     </ng-container>
 
     <ng-container matColumnDef="cuota">
       <th mat-header-cell *matHeaderCellDef>Cuota</th>
-      <td mat-cell *matCellDef="let element">{{ element.cuota }}</td>
-      <td mat-footer-cell *matFooterCellDef>{{ totalCuotas }}</td>
+      <td mat-cell *matCellDef="let element">
+        {{ element.cuota | separadorMiles }}
+      </td>
+      <td mat-footer-cell *matFooterCellDef>{{ totalCuotas | separadorMiles  }}</td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="columnasTabla"></tr>
