--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,48 @@
 <style></style>
-
+<mat-toolbar>
+  <div class="container-center">
+    <span>Calculadora de cuotas - Sistema francés</span>
+  </div>
+</mat-toolbar>
 <div class="content" role="main">
-  <h1 class="centrado-texto">Calcular cuotas - sistema fracés</h1>
+  <h2 class="centrado-texto">Ingrese el monto, plazo (cuotas) y la tasa</h2>
 
   <form class="example-form">
-    <mat-form-field class="example-full-width" appearance="fill">
-      <mat-label>Monto</mat-label>
-      <input name="capital" matInput [(ngModel)]="capital" (ngModelChange)="parseSeparadorMiles($event)" />
-    </mat-form-field>
+    <!-- <mat-grid-list cols="2" rowHeight="3:1"> -->
+      <!-- <mat-grid-tile> -->
+        <div class="container-center">
+          <mat-form-field class="example-full-width field-capital" appearance="fill">
+            <mat-label>Monto</mat-label>
+            <input
+              name="capital"
+              matInput
+              [(ngModel)]="capital"
+              (ngModelChange)="parseSeparadorMiles($event)"
+            />
+          </mat-form-field>
+        </div>
+      <!-- </mat-grid-tile> -->
+    <!-- </mat-grid-list> -->
 
-    <mat-form-field class="example-full-width" appearance="fill">
-      <mat-label>Cuotas</mat-label>
-      <input name="plazo" matInput maxlength="5" [(ngModel)]="plazo" />
-    </mat-form-field>
-
-    <mat-form-field class="example-full-width" appearance="fill">
-      <mat-label>Tasa</mat-label>
-      <input name="tasa" matInput maxlength="5" [(ngModel)]="tazaInteres" />
-    </mat-form-field>
+    <mat-grid-list cols="5" rowHeight="1:1">
+      <mat-grid-tile></mat-grid-tile>
+      <mat-grid-tile>
+        <mat-form-field class="example-full-width" appearance="fill">
+          <mat-label>Cuotas</mat-label>
+          <input name="plazo" matInput maxlength="5" [(ngModel)]="plazo" />
+        </mat-form-field>
+      </mat-grid-tile>
+      <mat-grid-tile></mat-grid-tile>
+      <mat-grid-tile>
+        <mat-form-field class="example-full-width" appearance="fill">
+          <mat-label>Tasa</mat-label>
+          <input name="tasa" matInput maxlength="5" [(ngModel)]="tazaInteres" />
+        </mat-form-field>
+      </mat-grid-tile>
+    </mat-grid-list>
 
     <div class="container-button">
-      <button mat-raised-button (click)="calcular()">Generar</button>
+      <button mat-raised-button (click)="procesar()">Generar</button>
     </div>
   </form>
 
@@ -41,7 +63,9 @@
       <td mat-cell *matCellDef="let element">
         {{ element.amortizacion | separadorMiles }}
       </td>
-      <td mat-footer-cell *matFooterCellDef>{{ totalAmortizacion | separadorMiles }}</td>
+      <td mat-footer-cell *matFooterCellDef>
+        {{ totalAmortizacion | separadorMiles }}
+      </td>
     </ng-container>
 
     <ng-container matColumnDef="interes">
@@ -49,7 +73,9 @@
       <td mat-cell *matCellDef="let element">
         {{ element.interes | separadorMiles }}
       </td>
-      <td mat-footer-cell *matFooterCellDef>{{ totalInteres | separadorMiles  }}</td>
+      <td mat-footer-cell *matFooterCellDef>
+        {{ totalInteres | separadorMiles }}
+      </td>
     </ng-container>
 
     <ng-container matColumnDef="saldo">
@@ -65,7 +91,9 @@
       <td mat-cell *matCellDef="let element">
         {{ element.cuota | separadorMiles }}
       </td>
-      <td mat-footer-cell *matFooterCellDef>{{ totalCuotas | separadorMiles  }}</td>
+      <td mat-footer-cell *matFooterCellDef>
+        {{ totalCuotas | separadorMiles }}
+      </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="columnasTabla"></tr>
