--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -9,6 +9,10 @@ body {
   justify-content: center;
 }
 
+.toolbar {
+  background: #0f93c9;
+}
+
 .centrado-texto {
   text-align: center;
   margin-top: 30px;
@@ -25,6 +29,7 @@ form {
 .content {
   margin: 0 auto;
   max-width: 1024px;
+  margin-bottom: 100px;
 }
 
 .container-button {
@@ -75,4 +80,17 @@ td {
 
 tr.mat-footer-row {
   font-weight: bold;
+}
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+}
+
+.logo-github {
+  width: 30px;
+  height: 30px;
 }
