--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -40,6 +40,7 @@ form {
 .tabla-cuotas {
   width: 100%;
   margin-top: 30px;
+  min-width: 650px;
 }
 
 .mat-column-demo-position {
@@ -93,4 +94,16 @@ tr.mat-footer-row {
 .logo-github {
   width: 30px;
   height: 30px;
+}
+
+@media screen and (max-width: 700px) {
+  .responsive {
+    overflow-x: auto;
+  }
+}
+
+@media screen and (max-width: 390px) {
+  .titulo-toolbar {
+    font-size: 17px;
+  }
 }
